--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,9 +1,16 @@
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
+<%= form_for @song do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <br>
+  <textarea name="song[note_contents]" id="song_notes_0"></textarea>
+  <textarea name="song[note_contents]" id="song_notes_1"></textarea>
 
   <%= f.submit %>
 <% end %>
